force-app/main/default/objects/Ward__c/Ward__c.object-meta.xml
<CustomObject>
    <label>Ward(IP)</label>
    <nameField>
        <label>Ward(IP)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>