force-app/main/default/objects/Ward__c/fields/Occupied_Beds__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Beds__c</fullName>
    <label>Occupied Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>