force-app/main/default/objects/Ward__c/fields/Per_day_Charge__c.field-meta.xml
<CustomField>
    <fullName>Per_day_Charge__c</fullName>
    <label>Per day Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>