force-app/main/default/objects/Ward__c/fields/Ward_No__c.field-meta.xml
<CustomField>
    <fullName>Ward_No__c</fullName>
    <label>Ward No</label>
    <type>AutoNumber</type>
</CustomField>