force-app/main/default/objects/Ward__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ward_No__c</columns>
    <columns>Ward_Name__c</columns>
    <columns>Ward_Type__c</columns>
    <columns>Total_Beds__c</columns>
    <columns>Occupied_Beds__c</columns>
    <columns>Per_day_Charge__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>